src/test/ui/mismatched_types/issue-38371.stderr
error[E0308]: mismatched types
  --> $DIR/issue-38371.rs:16:8
   |
16 | fn foo(&foo: Foo) {
   |        ^^^^ expected struct `Foo`, found reference
   |
   = note: expected type `Foo`
   = note:    found type `&_`
   = help: did you mean `foo: &Foo`?

error[E0308]: mismatched types
  --> $DIR/issue-38371.rs:28:9
   |
28 | fn agh(&&bar: &u32) {
   |         ^^^^ expected u32, found reference
   |
   = note: expected type `u32`
   = note:    found type `&_`

error[E0529]: expected an array or slice, found `u32`
  --> $DIR/issue-38371.rs:31:9
   |
31 | fn ugh(&[bar]: &u32) {
   |         ^^^^^ pattern cannot match with input type `u32`

error: aborting due to 3 previous errors

